2012-02-21  Felix Ingrand  <felix@cturtle>

	* openprs-util.pc.in (prefix): Separate openprs.pc and openprs-util.pc

	* Makefile.am (oprs_LDADD): -export-dynamic is only needed for oprs and xoprs... a priori.

2012-02-17  Felix Ingrand  <felix@cturtle>

	* send-message.c: .h include cleanup.

	* mp-register.c: .h include cleanup.

2012-02-16  Felix Ingrand  <felix@cturtle>

	* Makefile.am: added AM_LDFLAGS = -export-dynamic . This seems to solve my problem of symbols not properly found after
	lt_dlsym had linked one of my user code loading function. This is still a mistery to me... and will need a dl expert to
	explain me why this was working for some functions and not other (even if they were in the same file...).

2012-02-15  Felix Ingrand  <felix@cturtle>

	* ltdl-loader.c: Code to load external dl (from ev-function.c).

	* oprs-parser.y.part: Added commands to the parser to load actions, evaluable functions and predicates. ex:
		load action "user-action-example"
		load evaluable function "user-ev-function-example"
		load evaluable predicate "user-ev-predicate-example"

	* user-ev-function.c user-action.c user-ev-predicate.c: Example of dynamic loading of actions, functions and predicates.

	* ev-function.c: Added ltdl code to load actions, evaluable functions and predicates.

2011-09-08  Francois Felix Ingrand  <felix@ingrand.net>

	* goprs-main.c (oprs_main): log_file and language_str  not properly intialized breaks under Darwin.

	* xm2gtk_f.h (XmToggleButtonGetState): Darwin linker seems to be more touchy than Linux's . It complains for undefined function,
		  even if they are dead code?

2011-08-08  Felix Ingrand  <felix@cturtle>

	* xoprs-main.c (deregister_main_loop): This should be 1000 not 100

2011-07-13  Francois Felix Ingrand  <felix@ingrand.net>

	* mp.c (add_buffered_message): Fixed again a 32/64 bits problem when using the message passer.

2011-05-27  Francois Felix Ingrand  <felix@ingrand.net>

	* configure.ac: Bump the patch level to 1.0b14.
