@@ -113,3 +113,5 @@ src/test.inc
 c++-goprs-relocatable
 goprs-relocatable
 goprs-user
+src/gope-icon.h
+src/goprs-icon.h
